2003-01-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkImage.c (DeleteImage): delete the image's entry in the
	image table correctly when there are no more instances.  This
	reopens bug 220891. [Bug #669759]

2003-01-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/loadTk.n: note that ::safe::loadTk has a prereq on
	::safe::interpCreate or ::safe::interpInit. [Bug #669159]

	* doc/photo.n: $image put only accepts -format and -to, and note
	extended use of -to.

2003-01-17  D. Richard Hipp <drh@hwaci.com>
	* generic/tkCanvUtil.c: The clipping algorithm introduced on 2003-01-08
	was unnecessarily aggressive in reducing the size of the clipping box.
	This did not cause a problem for normal display, but did create
	trouble for some extensions that attempt to render a canvas on a
	GDI printer under Windows.  The patch here relaxes the constraints on
	the clipping box somewhat.  [Bug #663981]

2003-01-14  Joe English  <jenglish@users.sourceforge.net>
	* generic/tkSelect.c (Tk_CreateSelHandler):
	Fix for #666346 "Selection handling crashes under KDE 3.0"
	* tests/unixSelect.test (unixSelect-1.20): Added test case.

2003-01-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinDialog.c (Tk_ChooseDirectoryObjCmd,
	ChooseDirectoryValidateProc, Tk_MessageBoxObjCmd):
	Remove unused tsdPtr variable. Use TEXT macro
	instead of _T macro since _T does not work
	under Cygwin. Declare flags as UINT to avoid
	compiler warning when compiling with mingw.

2003-01-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/Makefile.in: Add TCL_DEFS to AC_FLAGS
	so that compiler flags defined by Tcl get
	passed to the compiler. Add empty rule
	for cat.c so that Tk compiles under msys.
	* win/configure: Regen.
	* win/tcl.m4: Update from Tcl, this pulls
	in a subst of TCL_DEFS, it also defines
	USE_THREAD_ALLOC when threads are used
	and it updates the SC_ENABLE_SYMBOLS
	and SC_PROG_TCLSH macros to match the
	ones used in Tcl.
